# llm_function_calling

./: Makefile  README.md  main.py  pyproject.toml
model/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
