[tool.poetry]
name = "llm-function-calling"
version = "0.1.0"
description = ""
authors = ["Hiep Dinh <hoanghiepitvnn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.42.0"
instructor = "^1.4.0"
llama-cpp-python = {extras = ["server"], version = "^0.2.89"}
vnstock3 = "^0.3.0.7"
bs4 = "^0.0.2"
transformers = "^4.44.2"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
